[gd_scene load_steps=5 format=3 uid="uid://d2hcug3ndmg2a"]

[ext_resource type="Script" path="res://Scripts/Synthesizer.gd" id="1_3pt24"]
[ext_resource type="Texture2D" uid="uid://dawaqyer6v36a" path="res://2DAssets/Frame.png" id="1_rlins"]
[ext_resource type="Theme" uid="uid://cxjmtitrmarst" path="res://2DAssets/UITheme.tres" id="3_n0vho"]
[ext_resource type="Texture2D" uid="uid://dq8bgs2hkl5e" path="res://2DAssets/PlaceholderIcon.png" id="4_vf8ih"]

[node name="SynthesizerUi" type="Control"]
custom_minimum_size = Vector2(570, 570)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.0
offset_top = -287.0
offset_right = 288.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3pt24")

[node name="TextureRect1" type="TextureRect" parent="."]
custom_minimum_size = Vector2(280, 280)
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 285.0
offset_bottom = 285.0
texture = ExtResource("1_rlins")
expand_mode = 1

[node name="Button1" type="Button" parent="TextureRect1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_n0vho")

[node name="SlotA" type="TextureRect" parent="TextureRect1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect1/SlotA"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotB" type="TextureRect" parent="TextureRect1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -40.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect1/SlotB"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotC" type="TextureRect" parent="TextureRect1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect1/SlotC"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotD" type="TextureRect" parent="TextureRect1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect1/SlotD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="."]
custom_minimum_size = Vector2(140, 140)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -285.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 285.0
grow_horizontal = 0
texture = ExtResource("1_rlins")
expand_mode = 1

[node name="Button2" type="Button" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_n0vho")

[node name="SlotA" type="TextureRect" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect2/SlotA"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotB" type="TextureRect" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -40.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect2/SlotB"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotC" type="TextureRect" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect2/SlotC"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotD" type="TextureRect" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect2/SlotD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect3" type="TextureRect" parent="."]
custom_minimum_size = Vector2(140, 140)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -285.0
offset_right = 285.0
offset_bottom = -5.0
grow_vertical = 0
texture = ExtResource("1_rlins")
expand_mode = 1

[node name="Button3" type="Button" parent="TextureRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_n0vho")

[node name="SlotA" type="TextureRect" parent="TextureRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect3/SlotA"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotB" type="TextureRect" parent="TextureRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -40.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect3/SlotB"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotC" type="TextureRect" parent="TextureRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect3/SlotC"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotD" type="TextureRect" parent="TextureRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect3/SlotD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect4" type="TextureRect" parent="."]
custom_minimum_size = Vector2(280, 280)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -285.0
offset_top = -285.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("1_rlins")
expand_mode = 1

[node name="SlotA" type="TextureRect" parent="TextureRect4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect4/SlotA"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotB" type="TextureRect" parent="TextureRect4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -40.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect4/SlotB"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotC" type="TextureRect" parent="TextureRect4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect4/SlotC"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotD" type="TextureRect" parent="TextureRect4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vf8ih")

[node name="Panel" type="Panel" parent="TextureRect4/SlotD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button4" type="Button" parent="TextureRect4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_n0vho")

[node name="TopIngredientWindow" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.496
offset_top = 4.0
offset_bottom = -0.200012
grow_horizontal = 2

[node name="TextureRect5" type="TextureRect" parent="TopIngredientWindow"]
custom_minimum_size = Vector2(575, 281)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_rlins")

[node name="ItemList" type="ItemList" parent="TopIngredientWindow"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.035
anchor_top = 0.064
anchor_right = 0.991
anchor_bottom = 0.925
offset_left = -0.125
offset_top = 2.016
offset_right = -19.825
offset_bottom = 0.0749817
theme = ExtResource("3_n0vho")
theme_override_font_sizes/font_size = 16
item_count = 1
max_columns = 8
same_column_width = true
fixed_column_width = 50
item_0/text = "999"
item_0/icon = ExtResource("4_vf8ih")

[node name="BotIngredientWindow" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.991
offset_top = 1.5
offset_bottom = 0.174988
grow_horizontal = 2

[node name="TextureRect5" type="TextureRect" parent="BotIngredientWindow"]
custom_minimum_size = Vector2(575, 281)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_rlins")

[node name="ItemList" type="ItemList" parent="BotIngredientWindow"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.035
anchor_top = 0.064
anchor_right = 0.991
anchor_bottom = 0.925
offset_left = -0.125
offset_top = 2.016
offset_right = -19.825
offset_bottom = 0.0749817
theme = ExtResource("3_n0vho")
theme_override_font_sizes/font_size = 16
item_count = 1
item_0/text = "999"
item_0/icon = ExtResource("4_vf8ih")

[connection signal="pressed" from="TextureRect1/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="TextureRect2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="TextureRect3/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="TextureRect4/Button4" to="." method="_on_button_4_pressed"]
